Plus sign (#497)
- value acceptance with leading plus sign